fix: some to list refactor. needs refactor sonarqube tasks